; ModuleID = '/home/carl/AnghaBench/vlc/modules/demux/playlist/extr_asx.c_isXmlEncoded.c'
source_filename = "/home/carl/AnghaBench/vlc/modules/demux/playlist/extr_asx.c_isXmlEncoded.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@.str = private unnamed_addr constant [5 x i8] c"<>'\22\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i8*)* @isXmlEncoded to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @isXmlEncoded(i8* %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca i8*, align 8
  %4 = alloca i32, align 4
  %5 = alloca i8*, align 8
  %6 = alloca i8*, align 8
  %7 = alloca i8*, align 8
  %8 = alloca i8*, align 8
  %9 = alloca i8*, align 8
  store i8* %0, i8** %3, align 8
  %10 = load i8*, i8** %3, align 8
  %11 = icmp ne i8* %10, null
  %12 = zext i1 %11 to i32
  %13 = call i32 @assert(i32 %12)
  %14 = load i8*, i8** %3, align 8
  %15 = call i32* @strpbrk(i8* %14, i8* getelementptr inbounds ([5 x i8], [5 x i8]* @.str, i64 0, i64 0))
  %16 = icmp ne i32* %15, null
  br i1 %16, label %17, label %18

17:                                               ; preds = %1
  store i32 0, i32* %2, align 4
  br label %118

18:                                               ; preds = %1
  store i32 0, i32* %4, align 4
  br label %19

19:                                               ; preds = %18, %114
  %20 = load i8*, i8** %3, align 8
  %21 = call i8* @strchr(i8* %20, i8 signext 38)
  store i8* %21, i8** %5, align 8
  %22 = load i8*, i8** %5, align 8
  %23 = icmp eq i8* %22, null
  br i1 %23, label %24, label %25

24:                                               ; preds = %19
  br label %116

25:                                               ; preds = %19
  %26 = load i8*, i8** %5, align 8
  %27 = call i8* @strchr(i8* %26, i8 signext 59)
  store i8* %27, i8** %6, align 8
  %28 = load i8*, i8** %6, align 8
  %29 = icmp eq i8* %28, null
  br i1 %29, label %30, label %31

30:                                               ; preds = %25
  store i32 0, i32* %2, align 4
  br label %118

31:                                               ; preds = %25
  %32 = load i8*, i8** %5, align 8
  %33 = getelementptr inbounds i8, i8* %32, i64 1
  %34 = load i8, i8* %33, align 1
  %35 = sext i8 %34 to i32
  %36 = icmp eq i32 %35, 35
  br i1 %36, label %37, label %90

37:                                               ; preds = %31
  %38 = load i8*, i8** %5, align 8
  %39 = getelementptr inbounds i8, i8* %38, i64 2
  %40 = load i8, i8* %39, align 1
  %41 = sext i8 %40 to i32
  %42 = icmp eq i32 %41, 120
  br i1 %42, label %43, label %66

43:                                               ; preds = %37
  %44 = load i8*, i8** %5, align 8
  %45 = getelementptr inbounds i8, i8* %44, i64 3
  store i8* %45, i8** %7, align 8
  %46 = load i8*, i8** %7, align 8
  %47 = load i8*, i8** %6, align 8
  %48 = icmp eq i8* %46, %47
  br i1 %48, label %49, label %50

49:                                               ; preds = %43
  store i32 0, i32* %2, align 4
  br label %118

50:                                               ; preds = %43
  br label %51

51:                                               ; preds = %62, %50
  %52 = load i8*, i8** %7, align 8
  %53 = load i8*, i8** %6, align 8
  %54 = icmp ult i8* %52, %53
  br i1 %54, label %55, label %65

55:                                               ; preds = %51
  %56 = load i8*, i8** %7, align 8
  %57 = load i8, i8* %56, align 1
  %58 = call i32 @isxdigit(i8 signext %57)
  %59 = icmp ne i32 %58, 0
  br i1 %59, label %61, label %60

60:                                               ; preds = %55
  store i32 0, i32* %2, align 4
  br label %118

61:                                               ; preds = %55
  br label %62

62:                                               ; preds = %61
  %63 = load i8*, i8** %7, align 8
  %64 = getelementptr inbounds i8, i8* %63, i32 1
  store i8* %64, i8** %7, align 8
  br label %51

65:                                               ; preds = %51
  br label %89

66:                                               ; preds = %37
  %67 = load i8*, i8** %5, align 8
  %68 = getelementptr inbounds i8, i8* %67, i64 2
  store i8* %68, i8** %8, align 8
  %69 = load i8*, i8** %8, align 8
  %70 = load i8*, i8** %6, align 8
  %71 = icmp eq i8* %69, %70
  br i1 %71, label %72, label %73

72:                                               ; preds = %66
  store i32 0, i32* %2, align 4
  br label %118

73:                                               ; preds = %66
  br label %74

74:                                               ; preds = %85, %73
  %75 = load i8*, i8** %8, align 8
  %76 = load i8*, i8** %6, align 8
  %77 = icmp ult i8* %75, %76
  br i1 %77, label %78, label %88

78:                                               ; preds = %74
  %79 = load i8*, i8** %8, align 8
  %80 = load i8, i8* %79, align 1
  %81 = call i32 @isdigit(i8 signext %80)
  %82 = icmp ne i32 %81, 0
  br i1 %82, label %84, label %83

83:                                               ; preds = %78
  store i32 0, i32* %2, align 4
  br label %118

84:                                               ; preds = %78
  br label %85

85:                                               ; preds = %84
  %86 = load i8*, i8** %8, align 8
  %87 = getelementptr inbounds i8, i8* %86, i32 1
  store i8* %87, i8** %8, align 8
  br label %74

88:                                               ; preds = %74
  br label %89

89:                                               ; preds = %88, %65
  br label %113

90:                                               ; preds = %31
  %91 = load i8*, i8** %5, align 8
  %92 = getelementptr inbounds i8, i8* %91, i64 1
  store i8* %92, i8** %9, align 8
  %93 = load i8*, i8** %9, align 8
  %94 = load i8*, i8** %6, align 8
  %95 = icmp eq i8* %93, %94
  br i1 %95, label %96, label %97

96:                                               ; preds = %90
  store i32 0, i32* %2, align 4
  br label %118

97:                                               ; preds = %90
  br label %98

98:                                               ; preds = %109, %97
  %99 = load i8*, i8** %9, align 8
  %100 = load i8*, i8** %6, align 8
  %101 = icmp ult i8* %99, %100
  br i1 %101, label %102, label %112

102:                                              ; preds = %98
  %103 = load i8*, i8** %9, align 8
  %104 = load i8, i8* %103, align 1
  %105 = call i32 @isalnum(i8 signext %104)
  %106 = icmp ne i32 %105, 0
  br i1 %106, label %108, label %107

107:                                              ; preds = %102
  store i32 0, i32* %2, align 4
  br label %118

108:                                              ; preds = %102
  br label %109

109:                                              ; preds = %108
  %110 = load i8*, i8** %9, align 8
  %111 = getelementptr inbounds i8, i8* %110, i32 1
  store i8* %111, i8** %9, align 8
  br label %98

112:                                              ; preds = %98
  br label %113

113:                                              ; preds = %112, %89
  br label %114

114:                                              ; preds = %113
  store i32 1, i32* %4, align 4
  %115 = load i8*, i8** %6, align 8
  store i8* %115, i8** %3, align 8
  br label %19

116:                                              ; preds = %24
  %117 = load i32, i32* %4, align 4
  store i32 %117, i32* %2, align 4
  br label %118

118:                                              ; preds = %116, %107, %96, %83, %72, %60, %49, %30, %17
  %119 = load i32, i32* %2, align 4
  ret i32 %119
}

declare dso_local i32 @assert(i32) #1

declare dso_local i32* @strpbrk(i8*, i8*) #1

declare dso_local i8* @strchr(i8*, i8 signext) #1

declare dso_local i32 @isxdigit(i8 signext) #1

declare dso_local i32 @isdigit(i8 signext) #1

declare dso_local i32 @isalnum(i8 signext) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
